add isReadable check for root and more negative CL testing